refactor: migrate DTOs to Java Records and standardize polymorphic mapping
Migración de UsuarioDTO, EmpleadoDTO, ClienteDTO y recursos del sistema (Sector, Categoría) a Java Records para garantizar inmutabilidad.

Implementación de la interfaz UsuarioBase para habilitar el polimorfismo en la capa de mapeo.

Actualización de los mappers (UsuarioMapper, EmpleadoMapper, ClienteMapper) eliminando sintaxis JavaBean (get/is) por métodos de acceso nativos de Records.

Refactorización de SectorService y CategoriaProductosService incorporando lógica de borrado lógico (estado activo) y normalización de nombres.

Limpieza de integridad referencial para evitar huérfanos en la desvinculación de productos.