@@ -1,76 +1,50 @@
 package com.portfolio.inventory_app.service;
 
-import com.portfolio.inventory_app.dto.EmpleadoDto;
+import com.portfolio.inventory_app.dto.resources.EmpleadoDTO;
 import com.portfolio.inventory_app.exception.BusinessLogicException;
 import com.portfolio.inventory_app.exception.EmployeeStatusException;
+import com.portfolio.inventory_app.mapper.EmpleadoMapper;
 import com.portfolio.inventory_app.model.entities.Empleado;
 import com.portfolio.inventory_app.model.enums.Disponibilidad;
+import com.portfolio.inventory_app.model.enums.Rol;
 import com.portfolio.inventory_app.repository.EmpleadoRepository;
 import com.portfolio.inventory_app.util.DataValidator;
 import jakarta.transaction.Transactional;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
 import org.springframework.security.access.prepost.PreAuthorize;
-import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 
 @Service
+@RequiredArgsConstructor
 public class EmpleadoService {
 
-    @Autowired private EmpleadoRepository empleadoRepository;
-    @Autowired private DataValidator validator;
+    private final EmpleadoRepository empleadoRepository;
+    private final EmpleadoMapper empleadoMapper;
+    private final DataValidator validator;
+    private final PasswordEncoder passwordEncoder;
 
-    public List<EmpleadoDto> listAll() {
-        return empleadoRepository.findAll()
-        .stream()
-        .map(this::entityToDto)
-        .collect(java.util.stream.Collectors.toList());
+    public List<EmpleadoDTO.Response> listAll() {
+        return empleadoRepository.findAll().stream()
+                .map(empleadoMapper::toResponseDTO)
+                .toList();
     }
 
     @PreAuthorize("hasAuthority('CAN_MANAGE_EMPLOYEES') or hasAnyRole('SUPER_ADMIN','ADMIN')")
     @Transactional
-    public EmpleadoDto save(Empleado empleado) {
-        empleadoRepository.findByDni(empleado.getDni()).ifPresent(e -> {
-            throw new BusinessLogicException("El empleado ya existe");
+    public EmpleadoDTO.Response registrarEmpleado(EmpleadoDTO.Request request) {
+        empleadoRepository.findByLegajo(request.legajo()).ifPresent(e -> {
+            throw new BusinessLogicException("El Legajo: " + request.legajo() + " ya existe en el sistema");
         });
-        validator.validarEmail(empleado.getEmail());
-        
-        empleado.setPassword(new BCryptPasswordEncoder().encode(empleado.getPassword()));
-        if (empleado.getLegajo() == null || empleado.getLegajo().isEmpty()) {
-            String suffix = empleado.getDni().length() > 4
-                    ? empleado.getDni().substring(empleado.getDni().length() - 4)
-                    : empleado.getDni();
-            empleado.setLegajo("EMP-" + suffix);
-    }
-        Empleado saved = empleadoRepository.save(empleado);
-        return entityToDto(saved);
-    }
-
-    private EmpleadoDto entityToDto(Empleado empleado) {
-    EmpleadoDto dto = new EmpleadoDto();
-    dto.setId(empleado.getId());
-    dto.setNombre(empleado.getNombre());
-    dto.setEmail(empleado.getEmail());
-    dto.setDni(empleado.getDni());
-    dto.setRol(empleado.getRol().name());
-    dto.setTelefono(empleado.getTelefono());
-    dto.setDomicilio(empleado.getDomicilio());
-    dto.setEstado(empleado.isEstado());
-
-    dto.setLegajo(empleado.getLegajo());
-    dto.setDisponibilidad(empleado.getDisponibilidad().name());
-    dto.setSucursal(empleado.getSucursal());
-    dto.setObjetivoMensual(empleado.getObjetivoMensual());
-    dto.setObraSocial(empleado.getObraSocial());
-
-        if (empleado.getPuesto() != null) {
-            dto.setPuesto(empleado.getPuesto().getNombre());
-        } else {
-            dto.setPuesto("SIN ASIGNAR");
-        }
-    
-    return dto;
+        validator.validarEmail(request.email());
+        Empleado empleado = empleadoMapper.toEntity(request);
+            empleado.getUsuario().setPassword(passwordEncoder.encode(request.password()));
+            empleado.getUsuario().setRol(Rol.EMPLOYEE);
+            empleado.getUsuario().setEstado(true);
+            Empleado empleadoGuardado = empleadoRepository.save(empleado);
+            return empleadoMapper.toResponseDTO(empleadoGuardado);
     }
 
     public Empleado encontrarPorId(Long id) {
@@ -78,27 +52,33 @@ public class EmpleadoService {
                 .orElseThrow(() -> new BusinessLogicException("Empleado no encontrado con ID: " + id));
     }
 
-    public EmpleadoDto obtenerEmpleadoDto(Long id) {
-        Empleado e = encontrarPorId(id);
-        return entityToDto(e);
+    public EmpleadoDTO.Response obtenerEmpleadoDto(Long id) {
+        return empleadoMapper.toResponseDTO(encontrarPorId(id));
     }
 
     @PreAuthorize("hasAuthority('CAN_MANAGE_EMPLOYEES') or hasAnyRole('SUPER_ADMIN','ADMIN')")
     @Transactional
-    public EmpleadoDto updateStatus(Long id, boolean nuevoEstado) {
-        Empleado existing = empleadoRepository.findById(id)
-                .orElseThrow(() -> new BusinessLogicException("Empleado no encontrado con ID: " + id));
+    public EmpleadoDTO.Response updateStatus(Long id, boolean nuevoEstado) {
+        Empleado existing = encontrarPorId(id);
         existing.setEstado(nuevoEstado);
-        Empleado actualizado = empleadoRepository.save(existing);
-        return entityToDto(actualizado);
+        return empleadoMapper.toResponseDTO(empleadoRepository.save(existing));
+    }
+
+    @Transactional
+    public EmpleadoDTO.Response update(Long id, EmpleadoDTO.Request request) {
+        Empleado existing = encontrarPorId(id);
+        if (!existing.getEmail().equals(request.email())) {
+            validator.validarEmail(request.email());
+        }
+        empleadoMapper.updateFromDto(request, existing);
+        return empleadoMapper.toResponseDTO(empleadoRepository.save(existing));
     }
 
     private void verificarEstadoIntegral(Empleado empleado) {
-        if (!empleado.isEstado()) throw new RuntimeException("Empleado dado de baja.");
+        if (!empleado.isEstado()) throw new BusinessLogicException("Empleado dado de baja.");
         if (empleado.getDisponibilidad() != Disponibilidad.PRESENTE) {
             throw new EmployeeStatusException("Situación administrativa: " + empleado.getDisponibilidad());
         }
-        // verificarHorarioLaboral(empleado);
     }
 
 }
